<?xml version="1.0" encoding="utf-8"?><androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="2dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/btn_white"
        android:paddingLeft="24dp"
        android:paddingBottom="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/person_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/person_name_text"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/person_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:drawableStart="@drawable/ic_dot_8"
                android:drawablePadding="6dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/person_age_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/person_nation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:drawableStart="@drawable/ic_dot_8"
                android:drawablePadding="6dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/person_nationality_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/person_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:drawableStart="@drawable/ic_dot_8"
                android:drawablePadding="6dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/person_birth_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/person_net_worth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:drawableStart="@drawable/ic_dot_8"
                android:drawablePadding="6dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/person_nw_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/person_occupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:drawableStart="@drawable/ic_dot_8"
                android:drawablePadding="6dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/person_occupation_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:drawableStart="@drawable/ic_dot_8"
                    android:drawablePadding="6dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/other_details_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/person_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/person_height_text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/person_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/person_gender_text"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>